@@ -73,4 +73,24 @@
 			<menu link="option=com_podcastmedia&amp;view=media" view="media" alt="Podcast-Media/Media" img="../administrator/components/com_podcastmanager/media/images/icons/icon-16-podcastmanager.png">COM_PODCASTMANAGER_SUBMENU_FILES</menu>
 		</submenu>
 	</administration>
+	<!-- Below section is data for Akeeba Backup System Restore Points -->
+	<restorepoint>
+		<customdirs>
+			<dir>administrator/components/com_podcastmedia</dir>
+			<dir>components/com_podcastmedia</dir>
+			<dir>libraries/getid3</dir>
+			<dir>modules/mod_podcastmanager</dir>
+			<dir>plugins/content/podcastmanager</dir>
+			<dir>plugins/editors-xtd/podcastmanager</dir>
+		</customdirs>
+		<langfiles>
+			<lang>com_podcastmedia</lang>
+			<lang>mod_podcastmanager</lang>
+			<lang>plg_content_podcastmanager</lang>
+			<lang>plg_editors-xtd_podcastmanager</lang>
+		</langfiles>
+		<extratables>
+			<table>podcastmanager_feeds</table>
+		</extratables>
+	</restorepoint>
 </extension>
