@@ -3,6 +3,7 @@
 + Added pagination to list layout
 + Added feed link to head
 - Removed params conversion in getItems
++ Add support for Akeeba Backup System Restore Points
 
 28-June-2011 Michael Babker Version 1.7 Changes
 # Correct counts for feeds view
